--- a/Core/View/About.html.twig
+++ b/Core/View/About.html.twig
@@ -46,7 +46,7 @@
                                     </p>
                                 </div>
                                 <div class="col-md-auto">
-                                    <img src="Core/Assets/Images/horizontal-logo.png" alt="FacturaScripts"
+                                    <img src="{{ asset('Core/Assets/Images/horizontal-logo.png') }}" alt="FacturaScripts"
                                          class="img-fluid" style="max-height: 80px;">
                                 </div>
                             </div>
@@ -135,7 +135,7 @@
                             </h3>
                             <hr>
                             <div class="row">
-                                {% for dataStorare in fsc.data.storage %}
+                                {% for dataStorare in fsc.data.storage_details %}
                                     <div class="col-lg-2 col-md-4 col-sm-6">
                                         <div class="text-center p-2">
                                             {% if dataStorare.name == 'files' %}
