Tarea #2060 - implementar linea de texto

--- a/Core/View/Tab/SalesDocument.html.twig
+++ b/Core/View/Tab/SalesDocument.html.twig
@@ -131,6 +131,7 @@
                     break;
 
                 case 'new-line':
+                case 'new-text-line':
                     $(".doc-line-desc:last").focus();
                     break;
 
